# Rust-Oauth2

./: Cargo.toml  README.md  p_b_pem.md  private_ec_key.pem  private_rsa_key.pem  public_ec_key.pem  public_rsa_key.pem
.github/workflows/: ci.yml
examples/: main.rs
src/: cli.rs  contract_audit.rs  jwt.rs  lib.rs  multichain.rs  pkce.rs
src/oauth/: authorization_code.rs  client_credentials.rs  device_flow.rs  implicit.rs  mod.rs  pkce.rs  resource_owner_password.rs  token.rs
src/wallet/: hardware.rs  harware.rs  mod.rs  multisig.rs  wallet.rs
src/web3/: contract_audit.rs  mod.rs  multichain.rs
tests/: integration_tests.rs  unit_tests.rs
