[package]
name = "web3-oauth2"
version = "0.1.0"
edition = "2021"
description = "A Rust library for OAuth 2.0 authentication and authorization in Web3 applications."
repository = "https://github.com/nzengi/web3-oauth2"
license = "MIT"
authors = ["nzengi"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "8", features = ["openssl", "serde"] }
openssl = "0.10"
warp = "0.3"
tower = "0.4"
web3 = "0.15.0"
clippy = "0.1"


[dev-dependencies]
tokio-test = "0.4"

