[package]
name = "rust_oauth2"
version = "0.1.0"
edition = "2021"
description = "A Rust library for OAuth 2.0 authentication and authorization in Web3 applications."
repository = "https://github.com/nzengi/web3-oauth2"
license = "MIT"
authors = ["nzengi"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
openssl = "0.10"
warp = "0.3"
tower = { version = "0.4", features = ["limit"] }
web3 = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
rand = "0.8"
sha2 = "0.9"
base64 = "0.13"
secp256k1 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
